--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,6 +7,9 @@
     "devDependencies": {
         "prisma": "5.11.0"
     },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
+    },
     "exports": {
         "./client": "./index.ts"
     }
